<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagem_red2"
    tools:context=".telaHistoria">

    <Button
        android:id="@+id/btnHistoriaVoltar"
        android:layout_width="134dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/corBotao"
        android:fontFamily="@font/walter_turncoat"
        android:onClick="irParaTelaInicial"
        android:text="@string/voltar"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtTituloHistoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/historia"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="504dp"
        android:background="@color/VermelhaEscuro"
        android:backgroundTint="@color/VermelhaEscuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtHistoriaParagrafo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txtHistoriaParagrafo1"
                    android:textColor="@color/white"
                    android:justificationMode="inter_word"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtHistoriaParagrafo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txtHistoriaParagrafo2"
                    android:textColor="@color/amareloFraco"
                    android:justificationMode="inter_word"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtHistoriaParagrafo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txtHistoriaParagrafo3"
                    android:textColor="@color/white"
                    android:justificationMode="inter_word"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtHistoriaParagrafo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txtHistoriaParagrafo4"
                    android:textColor="@color/amareloFraco"
                    android:justificationMode="inter_word"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgEnfeite"
                    android:layout_width="320dp"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/gun_detalhe"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>